mdapipkg/objects/Chapter_Health_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Calculate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Calculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Lookup_Field_API_Name__c</fullName>
        <label>Chapter Lookup Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Health_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This designates if the field is to be calculated on Education health records.</description>
        <label>Education Health Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_to_Aggregate__c</fullName>
        <label>Field to Aggregate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Quarterly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Quarterly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Yearly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Yearly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Contact Event</fullName>
                </value>
                <value>
                    <fullName>Account Affiliation</fullName>
                </value>
                <value>
                    <fullName>Chapter Event Association</fullName>
                </value>
                <value>
                    <fullName>Goals</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
                <value>
                    <fullName>Contact Position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <label>Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Health_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>designates a field to be calculated on Region health during the daly batch.</description>
        <label>Region Health Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Field_API_Name__c</fullName>
        <label>Target Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chapter Health Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Auto_Calculate__c</columns>
        <columns>Function__c</columns>
        <columns>Keep_Quarterly__c</columns>
        <columns>Keep_Yearly__c</columns>
        <columns>SOQL_Query__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Region_Health_Calculation__c</columns>
        <columns>Education_Health_Calculation__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chapter_Health_Daily</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Field_to_Aggregate__c</columns>
        <columns>Function__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Health_Calculation__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Auto_Calculate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chapter Health - Daily</label>
    </listViews>
    <listViews>
        <fullName>Chapter_Health_Quarterly</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Keep_Quarterly__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chapter Health - Quarterly</label>
    </listViews>
    <listViews>
        <fullName>Chapter_Health_Yearly</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Health_Calculation__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Keep_Yearly__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chapter Health - Yearly</label>
    </listViews>
    <listViews>
        <fullName>Regional_Health_Daily</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Target_Field_API_Name__c</columns>
        <columns>Field_to_Aggregate__c</columns>
        <columns>Function__c</columns>
        <columns>SOQL_Query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Health_Calculation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Regional Health - Daily</label>
    </listViews>
    <nameField>
        <label>Chapter Health Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chapter Health Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>